Implement client-valuestore
